--- a/FlashLFQ/FlashLFQ.csproj
+++ b/FlashLFQ/FlashLFQ.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(TargetFramework)' == 'net471'">
